--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "^16.8.2",
     "react-dom": "^16.8.2",
+    "react-infinite-scroll-component": "^4.5.0",
     "react-scripts": "2.1.5"
   },
   "scripts": {
